<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LxxDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!--  -->
    <string name="action_contact">Contact</string>
    <!--  -->
    <string name="chat_head_desc">用户头像</string>
    <string name="chat_name">用户名</string>
    <string name="chat_content">消息内容</string>
    <!--  -->
    <string name="image">Contacs Image</string>
    <string name="title_activity_display_contact">DisplayContactActivity</string>
    <string name="contact_name">Contact Name :</string>
    <string name="contact_number">Contact Number :</string>
    <string name="button_msg">Send Message</string>
    <string name="button_call">Make Call</string>

</resources>